polish: Black Knights' Fortress (#2349)
* refactor: modernize

* test: opt into sidebar test

* fix: quest start dialog highlight

* fix: add missing steps to "enter fortress"

* nit: add teleport step

* polish